fix white space

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,6 @@
+.app{
+    overflow:hidden;
+}
 .header{
     box-shadow: 0 3px 3px 0 rgb(0 0 0 / 10%);
     padding-bottom: 15px;
